--- a/public/stylesheets/events.css
+++ b/public/stylesheets/events.css
@@ -280,3 +280,20 @@ hr {
     inset 3px 3px 5px rgba(0, 0, 0, 0.1);
 }
 
+.star {
+  visibility: hidden;
+  font-size: 30px;
+  cursor: pointer;
+}
+
+.star:before {
+  content: "\2605";
+  position: absolute;
+  visibility: visible;
+}
+
+.star:checked:before {
+  content: "\2605";
+  position: absolute;
+  color: goldenrod;
+}
