--- a/views/events.handlebars
+++ b/views/events.handlebars
@@ -5,7 +5,7 @@
   <div class="item-c">
 
     <div id="titleLink">
-      <h2>{{dataValues.title}}</h2>
+      <h2>{{dataValues.title}}</h2><input id="favorite" class="star" isChecked="{{dataValues.favorite}}" type="checkbox" title="favorite">
     </div>
     <hr>
     <div id="descriptionT">Description:</div>
