added favorites route

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -29,6 +29,7 @@
 				<a href="sports">Sports</a>
 				<a href="arts">Arts</a>
 				<a href="education">Education</a>
+				<a href="favorites">Favorites</a>
 			</div>
 		</div>
 
