--- a/views/arts.handlebars
+++ b/views/arts.handlebars
@@ -10,7 +10,7 @@
   <div class="item-c">
 
     <div id="titleLink">
-      <h2>{{dataValues.title}}</h2>
+      <h2>{{dataValues.title}}</h2><input id="favorite" class="star" {{#if dataValues.favorite}}checked{{/if}} type="checkbox" title="favorite">
     </div>
     <hr>
     <div id="descriptionT">Description:</div>
